--- a/portfolio.css
+++ b/portfolio.css
@@ -1,66 +1,84 @@
+* {
+    background-color: #848484;
+}
 .topnav {
-    background-color: #333;
+    background-color: #fffcfc;
     overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
+    border: 1px solid black;
+    border-radius: 5px;
+
+}
+
+.topnav a {
+    float: right;
+    color: #000000;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 30px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
+    background-color: transparent;
+}
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
+    box-shadow: 0px 2px 0px black;
+}
+/* .topnav a.active {
     background-color: gold;
     color: white;
-  }
-#kk{
+  } */
+#picture{
+    position: static;
     border-radius: 50%;
     height: 300px;
     width: 300px;
-    box-shadow: 0 0 5px cyan,0 0 25px cyan;
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan;
     box-shadow: 0 0 250px rgb(18, 129, 129), 0 0 265px rgb(49, 195, 195);
-   
 }
-#name{
+
+.Design{
+    position: absolute;
+    float: left;
+    height: 400px;
+    width: 98%;
+    background-color: #000000;
+}
+#name {
     text-align: center;
 }
-#pic{
+
+#pic {
+    height: 600px;
     padding-top: 80px;
+    background-color: aqua;
 }
-#mynameis{
-        text-align: center;
-    }
-    #edu{
-        text-align: center;
-    }
-    #foot{
-        height: 150px;
-        background-color: rgb(168, 155, 155);
+
+#mynameis {
+    text-align: center;
+}
+
+#edu {
+    text-align: center;
+}
+
+#foot {
+    height: 150px;
+    background-color: rgb(168, 155, 155);
 
 
-    }
-    /* Style the tab */
+}
+
+/* Style the tab */
 .tab {
     float: left;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
     width: 30%;
     height: 300px;
-  }
-  
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
     display: block;
     background-color: inherit;
     color: black;
@@ -70,20 +88,20 @@
     outline: none;
     text-align: left;
     cursor: pointer;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
     background-color: #ddd;
-  }
-  
-  /* Create an active/current "tab button" class */
-  .tab button.active {
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
     background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
+}
+
+/* Style the tab content */
+.tabcontent {
     float: left;
     padding: 0px 12px;
     border: 1px solid #ccc;
@@ -91,58 +109,56 @@
     border-left: none;
     height: 300px;
     display: none;
-  }
-  * {box-sizing: border-box}
-body {font-family: "Lato", sans-serif;}
+}
 
-/* Style the tab */
+body {
+    font-family: "Lato", sans-serif;
+}
+
 .tab {
-  float: left;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
-  width: 30%;
-  height: 300px;
+    float: left;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    width: 30%;
+    height: 300px;
 }
 
-/* Style the buttons inside the tab */
 .tab button {
-  display: block;
-  background-color: inherit;
-  color: black;
-  padding: 22px 16px;
-  width: 100%;
-  border: none;
-  outline: none;
-  text-align: left;
-  cursor: pointer;
-  font-size: 17px;
+    display: block;
+    background-color: inherit;
+    color: black;
+    padding: 22px 16px;
+    width: 100%;
+    border: none;
+    outline: none;
+    text-align: left;
+    cursor: pointer;
+    font-size: 17px;
 }
 
-/* Change background color of buttons on hover */
 .tab button:hover {
-  background-color: #ddd;
+    background-color: #ddd;
 }
 
-/* Create an active/current "tab button" class */
 .tab button.active {
-  background-color: #ccc;
+    background-color: #ccc;
 }
 
 /* Style the tab content */
 .tabcontent {
-  background: rgb(137, 137, 135);
-  float: left;
-  padding: 0px 12px;
-  border: 1px solid #ccc;
-  width: 70%;
-  border-left: none;
-  height: 300px;
-  display: none;
+    background: rgb(137, 137, 135);
+    float: left;
+    padding: 0px 12px;
+    border: 1px solid #ccc;
+    width: 70%;
+    border-left: none;
+    height: 300px;
+    display: none;
 }
 
 /* Clear floats after the tab */
 .clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
+    content: "";
+    clear: both;
+    display: table;
 }
